--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="logo">
+      <img src="Point-of-view-solid-black.png">
+     </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -39,5 +42,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <footer>
+      <p>&copy; 2023 Point of View. All rights reserved.</p>
+    </footer>
   </body>
 </html>
